--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-parallax": "^3.5.1",
+    "sass": "^1.59.2",
+    "scss": "^0.2.4",
     "typescript": "4.9.5"
   }
 }
