--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.2.4",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
