--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.1",
     "@react-spring/web": "^9.7.1",
+    "@react-three/fiber": "^8.12.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.2.4",
+    "framer-motion-3d": "^10.10.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "next": "13.2.4",
@@ -26,6 +28,7 @@
     "react-parallax": "^3.5.1",
     "sass": "^1.59.2",
     "scss": "^0.2.4",
+    "three": "^0.151.0",
     "typescript": "4.9.5"
   }
 }
